--- a/mainapp/templates/mainapp/registration.html
+++ b/mainapp/templates/mainapp/registration.html
@@ -1,23 +1,25 @@
 {% extends 'index.html' %}
 {% block content %}
 
-  <div class="container-fluid pt-5">
-    <div class="row" >
-        <div class="col-md-12 justify-content-center text-center">
 
-            <form method="post" id="registration">
-                {% csrf_token %}
-                <label>Username:
-                    <input type="text" name="{{ form.username.name }}" placeholder="Your username here">
-                </label><br>
-                <label>E-mail:
-                    <input type="email" name="{{ form.email.name }}" placeholder="Your e-mail here">
-                </label><br>
-                <button class="btn btn-primary" type="submit" id="send">Submit</button>
-            </form>
-        </div>
+<div class="row container-fluid">
+    <div class="container-fluid col-md-12 text-center">
+
+
+        <form method="post" id="registr">{% csrf_token %}
+          <label>Username:
+            <input type="text" name="{{ form.username.name }}" id="id_username">
+          </label><br>
+          <label>Password:{{ form.password1 }}</label><br>
+          <label>Confirm your password:{{ form.password2 }}</label><br>
+          <button class="btn btn-primary" type="submit" id="send">Submit</button>
+        </form>
+
+        <a href="/profile/"><button class="btn btn-primary">Login</button></a>
+        <a href="/login/"><button class="btn btn-primary">Profile info</button></a>
+        <a href="/logout/"><button class="btn btn-primary">LogOut</button></a>
     </div>
-  </div>
+</div>
 
     {% if error_message %}
 
