--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Tutorio{% endblock %}</title>
+    <title>{% block title %}FileShearing{% endblock %}</title>
     {% load mptt_tags %}
     {% load staticfiles %}
     <link href="{% static 'mainapp/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
@@ -25,7 +25,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Tutorio</a>
+  <a class="navbar-brand" href="/">TASKS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,11 +33,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/cvdata/">CV Data<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/add-new-task/">ADD NEW TASK<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/posts">Posts</a>
-      </li>
+
         {% if request.user.is_authenticated and request.user.is_staff %}
           <li class="nav-item">
             <a class="nav-link disabled" href="/admin">Admin</a>
@@ -45,7 +43,7 @@
         {% endif %}
     </ul>
       {% if user.is_authenticated %}
-            <a href="/profile"> Profile {{ user.username }}</a>
+            Hello, {{ user.username }}!
             <a href="/logout" class="ml-2">Logout</a>
       {% else %}
             <form class="form-inline my-2 my-lg-0" method="post">
@@ -60,6 +58,11 @@
   </div>
 </nav>
 {% block content %}
+    <ol>
+        {% for task in tasks %}
+            <li>{{ task.theme }}</li>
+        {% endfor %}
+    </ol>
 {% endblock %}
 
 {% block post_category %}
