--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             {
                 height: 100%;
                 background-size: 100%;
-                background-image: url("https://w-dog.ru/wallpapers/9/19/538869885838337.jpg");
+                {#background-image: url("https://w-dog.ru/wallpapers/9/19/538869885838337.jpg");#}
                 background-attachment: fixed;
             }
      </style>
